fix informationspage with Collapse from Reactjs

--- a/src/pages/informations/informations.css
+++ b/src/pages/informations/informations.css
@@ -19,10 +19,6 @@
     font-family: 'Montserrat', serif;
 }
 
-.show-hide {
-
-}
-
 .arrowNav {
     width: 18px;
 }
@@ -30,16 +26,18 @@
 .scrollContainer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
     cursor: pointer;
     background-color: #ff6060;
     border-radius: 5px;
     color: white;
     padding: 6px 26px 6px 20px;
+    border: none;
 }
 
 
 .scrollContent {
-    display: none;
     background-color: #f6f6f6;
     color: #ff6060;
     border-radius: 0 0 5px 5px;
